--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,13 @@
             android:layout_marginBottom="16dp"
             android:textSize="16sp" />
 
-        <!-- Seu botão -->
+        <TextView
+            android:id="@+id/textoDuration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:textSize="16sp" />
+
         <Button
             android:id="@+id/botao"
             android:layout_width="match_parent"
